--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -17,16 +17,6 @@ output * bg #000000 solid_color
 #output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #exec glpaper "HDMI-A-1" $upstairs_monitorL $XDG_CONFIG_HOME/glpaper/fragments/matrix.frag
 
-### Idle configuration
-# To make sure swayidle waits for swaylock to lock the screen before it releases the inhibition lock,
-# swayidle's -w (wait) option and swaylock's -f/--daemonize options are used.
-exec swayidle -w \
-         timeout 300 'fish --command="sway_lock --debug 2>>/tmp/swaylock_timeout300.log"' \
-         idlehint 300 \
-         timeout 600 'swaymsg "output * dpms off"' \
-              resume 'swaymsg "output * dpms on"' \
-         before-sleep 'fish --command="sway_lock --debug 2>>/tmp/swaylock_beforesleep.log"' \
-
 ### Key bindings
 #
 # Basics:
@@ -289,6 +279,10 @@ exec systemctl --user start pscircle.service
 # since otherwise the service may be started before systemctl import-environment is complete.
 # For example: exec "systemctl --user import-environment; systemctl --user start example.service"
 exec systemctl --user import-environment
+
+# Running swayidle asa systemd service in order to be able to turn it on/off easier
+# using a Custom block in i3status-rs
+exec systemctl --user start swayidle.service
 
 #exec systemctl --user start ibus.service
 # Note: change to exec if not using --replace flag
