--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -44,7 +44,7 @@ mpd_music_dir = ~/music
 #        format          "44100:16:2"
 #}
 
-visualizer_fifo_path = /tmp/mpd.fifo
+visualizer_data_source = /tmp/mpd.fifo
 
 ## Note: Below parameter is needed for ncmpcpp to determine which output
 ## provides data for visualizer and thus allow syncing between visualization and
@@ -53,12 +53,6 @@ visualizer_output_name = "my_fifo"
 
 ## If you set format to 44100:16:2, make it 'yes'.
 #visualizer_in_stereo = yes
-
-## Note: Below parameter defines how often ncmpcpp has to "synchronize"
-## visualizer and audio outputs.  30 seconds is optimal value, but if you
-## experience synchronization problems, set it to lower value.  Keep in mind
-## that sane values start with >=10.
-visualizer_sync_interval = 30
 
 ## Note: To enable spectrum frequency visualization you need to compile ncmpcpp
 ## with fftw3 support.
