mpv: add untracked change from current config

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -17,3 +17,5 @@ video-sync=display-resample
 # so that the source framerate jives better with the display's refresh rate
 interpolation
 tscale=oversample
+
+script=/usr/lib/mpv/mpris.so
