GTK theme: switch to BlackMATE
Have had GTK theme errors in terminal when launching certain programs for a while now:

e.g.
`(firefox:1546842): Gtk-WARNING **: 21:37:23.149: Theme parsing error: gtk-contained-dark.css:2871:228: Missing closing bracket for :not()`

Adapta-Nokto repo says it is no longer developed, so switching to BlackMATE for now.

--- a/gtk-3.0/.config/gtk-3.0/settings.ini
+++ b/gtk-3.0/.config/gtk-3.0/settings.ini
@@ -1,13 +1,17 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
-gtk-theme-name=Adapta-Nokto
+gtk-theme-name=BlackMATE
 gtk-icon-theme-name=Adwaita
 gtk-font-name=Roboto 10
 gtk-cursor-theme-name=ComixCursors-Slim-Blue
 #gtk-cursor-theme-name=Adapta-Nokto
 gtk-application-prefer-dark-theme=true
 
-# Currently installed themes:
+# Currently isntalled themes:
+# ls /usr/share/themes
+# ls ~/.themes
+
+# Currently installed icons:
 # find /usr/share/icons ~/.local/share/icons ~/.icons -type d -name "cursors"
 
 # https://standards.freedesktop.org/icon-theme-spec/icon-theme-spec-latest.html
