i3status-rs/laptop: switch from pikaur to paru
If paru build time becomes too annoying on laptop
the check check if the below issue has been fixed
and go back to pikaur:

https://www.github.com/actionless/pikaur#595

--- a/i3status-rs/.config/i3status-rust/config-laptop.toml
+++ b/i3status-rs/.config/i3status-rust/config-laptop.toml
@@ -14,7 +14,7 @@ separator = ""
 block = "pacman"
 format = "{pacman}/{aur}"
 critical_updates_regex = "(linux|linux-lts|linux-zen)"
-aur_command = "pikaur --query --sysupgrade --aur 2>/dev/null"
+aur_command = "paru --query --sysupgrade --aur 2>/dev/null"
 # AUR only allows 4000 requests every 24 hours
 interval = 1800
 
