--- a/i3status-rs/.config/i3status-rust/config-laptop.toml
+++ b/i3status-rs/.config/i3status-rust/config-laptop.toml
@@ -86,7 +86,7 @@ block = "focused_window"
 block = "battery"
 driver = "sysfs"
 device = "CMB1"
-format = "{percentage}% {time}"
+format = "{percentage} {time}"
 
 [[block]]
 block = "time"
