i3status-rs: re-enable ibus block
It should now work reliably thanks to
https://github.com/greshake/i3status-rust/pull/1342

--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -102,11 +102,11 @@ on_click = "fish --command='check_xclients --menu'"
 interval = 5
 hide_when_empty = true
 
-#[[block]]
-#block = "ibus"
-#[block.mappings]
-#"mozc-jp" = "JP"
-#"xkb:us::eng" = "EN"
+[[block]]
+block = "ibus"
+[block.mappings]
+"mozc-jp" = "JP"
+"xkb:us::eng" = "EN"
 
 [[block]]
 block = "kdeconnect"
