mpd: disable MIDI to suppress warnings in terminal

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -390,3 +390,11 @@ replaygain			"auto"
 #filesystem_charset		"UTF-8"
 #
 ###############################################################################
+
+# disable wildmidi since do not play any MIDI files,
+# and it throws a warning on startup:
+# decoder: Decoder plugin 'wildmidi' is unavailable: configuration file does not exist: /etc/timidity/timidity.cfg
+decoder {
+        plugin "wildmidi"
+        enabled "no"
+}
