--- a/gtk-3.0/.config/gtk-3.0/settings.ini
+++ b/gtk-3.0/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
-gtk-theme-name=BlackMATE
+gtk-theme-name=Nordic
 gtk-icon-theme-name=Adwaita
 gtk-font-name=Roboto 10
 gtk-cursor-theme-name=ComixCursors-Slim-Blue
