i3status-rs/laptop: reenable ibus

--- a/i3status-rs/.config/i3status-rust/config-laptop.toml
+++ b/i3status-rs/.config/i3status-rust/config-laptop.toml
@@ -76,11 +76,11 @@ interval = 5
 [[block]]
 block = "focused_window"
 
-#[[block]]
-#block = "ibus"
-#[block.mappings]
-#"mozc-jp" = "JP"
-#"xkb:us::eng" = "EN"
+[[block]]
+block = "ibus"
+[block.mappings]
+"mozc-jp" = "JP"
+"xkb:us::eng" = "EN"
 
 [[block]]
 block = "battery"
