--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -256,7 +256,7 @@ bindsym Shift+XF86AudioLowerVolume exec playerctl position 3+
 bindsym Shift+XF86AudioRaiseVolume exec playerctl position 3-
 
 # Japanese IME
-bindsym $mod+Shift+a exec fish --command=ibus-toggle
+#bindsym $mod+Shift+a exec fish --command=ibus-toggle
 
 bindsym $mod+Shift+r exec kitty --name=launcher -e "fish --command 'complete --do-complete | sort -u | fzf | xargs -r swaymsg -t command exec'"
 for_window [app_id="^launcher$"] floating enable, border none
@@ -287,7 +287,8 @@ exec systemctl --user start swayidle.service
 
 #exec systemctl --user start ibus.service
 # Note: change to exec if not using --replace flag
-exec_always DISPLAY= ibus-daemon --xim --replace --daemonize
+#exec_always DISPLAY= ibus-daemon --xim --replace --daemonize
+exec_always fcitx5 -d --replace
 
 exec_always fish --command='switchaudio --device=headphones'
 
