--- a/systemd/.config/systemd/user/swayidle.service
+++ b/systemd/.config/systemd/user/swayidle.service
@@ -6,7 +6,7 @@ Documentation=man:swayidle(1)
 
 [Service]
 Type=simple
-ExecStart=swayidle
+ExecStart=/usr/bin/swayidle
 
 [Install]
 WantedBy=default.target
