i3status-rs: hide kernel update block when empty

--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -95,6 +95,7 @@ icons_format = " "
 [[block]]
 block = "custom"
 command = "fish --command='check_kernel --barmode'"
+hide_when_empty = true
 
 [[block]]
 block = "custom"
