--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -159,19 +159,7 @@ output * bg #000000 solid_color
 
     # move focus to the parent container
     bindsym $mod+a focus parent
-#
-# Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
 
-    # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
-
-    # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
-#
 # Resizing containers:
 #
 mode "resize" {
@@ -220,6 +208,24 @@ set $prompt echo | $_menu
 bindsym $mod+Shift+g exec notify-send "Starting Chrome..." --expire-time=1500; exec google-chrome-stable
 bindsym $mod+g exec notify-send "Starting Firefox..." --expire-time=1500; exec env GDK_BACKEND=wayland firefox-nightly
 #assign [class="Google-chrome"] $workspace01
+
+# Scratchpad (send windows there and get them back later)
+# Move the currently focused window to the scratchpad
+bindsym $mod+Shift+minus move scratchpad
+
+# Show the next scratchpad window or hide the focused scratchpad window.
+# If there are multiple scratchpad windows, this command cycles through them.
+#bindsym $mod+minus scratchpad show
+
+# change `$term --class` to `$term -a` if changing from kitty to foot
+bindsym $mod+minus exec (swaymsg "[app_id=dropdown] scratchpad show") || exec $term --class dropdown
+for_window [app_id="dropdown"] floating enable, \
+    border pixel 5, \
+    resize set 70 ppt 60 ppt, \
+    move position center, \
+    move to scratchpad, \
+    scratchpad show
+
 for_window [class="Google-chrome"] border none
 for_window [app_id="Google-chrome"] border none
 for_window [class="MozillaWindowClass"] border none
