--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -205,9 +205,6 @@ bindsym $mod+d exec fish --command=sway_menu | xargs swaymsg exec --
 set $_menu bemenu --fn "Monospace 12" --hf "#2B83A6" --tf "#2B83A6" --prompt
 set $prompt echo | $_menu
 
-bindsym $mod+Shift+g exec notify-send "Starting Chrome..." --expire-time=1500; exec google-chrome-stable
-bindsym $mod+g exec notify-send "Starting Firefox..." --expire-time=1500; exec env GDK_BACKEND=wayland firefox-nightly
-#assign [class="Google-chrome"] $workspace01
 
 # Scratchpad (send windows there and get them back later)
 # Move the currently focused window to the scratchpad
@@ -226,6 +223,8 @@ for_window [app_id="dropdown"] floating enable, \
     move to scratchpad, \
     scratchpad show
 
+bindsym $mod+Shift+g exec google-chrome-stable
+bindsym $mod+g exec firefox-nightly
 for_window [class="Google-chrome"] border none
 for_window [app_id="Google-chrome"] border none
 for_window [class="MozillaWindowClass"] border none
