--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -238,7 +238,8 @@ for_window [shell=".*"] title_format "%title :: %shell"
 
 bindsym $mod+e exec $term -e ranger
 
-bindsym Print exec fish --command=screenshot
+bindsym Print exec kill -9 (pgrep --full 'fish --command=screenshot') && exec fish --command=screenshot
+bindsym $mod+Print exec fish --command=screenshot_focused
 bindsym $mod+l exec fish --command="sway_lock --debug 2>>/tmp/swaylock_manual.log"
 bindsym --locked $mod+F1 exec fish --command="sway_setup_desktop --toggle"
 bindsym $mod+F2 exec fish --command=sway_selector
