sway: fix broken swaybar icons

--- a/sway/.config/sway/config.d/statusbar.conf
+++ b/sway/.config/sway/config.d/statusbar.conf
@@ -4,7 +4,8 @@
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     font pango:DejaVu Sans Mono, FontAwesome 10
-    icon_theme ComixCursors-Slim-Blue
+    # Re. icon theme: https://github.com/swaywm/sway/issues/5645#issuecomment-683404722
+    icon_theme Adwaita
     height 18
     position top
     status_command i3status-rs 2> /tmp/debugi3rs
