swaywsr: add more icons

--- a/swaywsr/.config/swaywsr/config.toml
+++ b/swaywsr/.config/swaywsr/config.toml
@@ -5,6 +5,7 @@ firefox = ""
 firefox-nightly = ""
 Alacritty = ""
 kitty = ""
+foot = ""
 vim = ""
 micro = ""
 nano = ""
@@ -22,6 +23,10 @@ ncmpcpp = ""
 imv = ""
 youtube-viewer = ""
 mpv =  ""
+vlc =  ""
+"org.jellyfin.jellyfinmediaplayer" =  ""
+"org.pwmt.zathura" = ""
+"org.https://nomacs.nomacs" = ""
 
 [aliases]
 ghb = "HandBrake"
