Use pinentry-bemenu
Need to use a wrapper script since pinentry-bemenu does not
have a CLI fallback like pinentry-gnome3 that I was using in the past.

--- a/gnupg/.config/gnupg/gpg-agent.conf
+++ b/gnupg/.config/gnupg/gpg-agent.conf
@@ -1,5 +1,5 @@
 enable-ssh-support
-pinentry-program /usr/bin/pinentry-bemenu
+pinentry-program ~/.local/bin/pinentry-custom
 max-cache-ttl 3600
 default-cache-ttl 3600
 default-cache-ttl-ssh 3600
