swaywsr: add more icons

--- a/swaywsr/.config/swaywsr/config.toml
+++ b/swaywsr/.config/swaywsr/config.toml
@@ -19,14 +19,17 @@ ranger = ""
 Kodi = ""
 Steam = ""
 steam = ""
+gamescope = ""
 ncmpcpp = ""
 imv = ""
+Sonixd = ""
 youtube-viewer = ""
 mpv =  ""
 vlc =  ""
 "org.jellyfin.jellyfinmediaplayer" =  ""
 "org.pwmt.zathura" = ""
 "org.https://nomacs.nomacs" = ""
+"virt-manager" = ""
 
 [aliases]
 ghb = "HandBrake"
